--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.11.5",
     "pg-pool": "^3.6.2"
   }
