--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
+    "express-session": "^1.18.0",
     "pg": "^8.11.5",
     "pg-pool": "^3.6.2"
   }
