--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,10 +20,12 @@
     "@mui/material-nextjs": "^5.15.11",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "axios": "^1.6.8",
+    "mapbox-gl": "^3.3.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
+    "react-map-gl": "^7.1.7",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
