--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "pg": "^8.11.5",
-    "pg-pool": "^3.6.2"
+    "pg-pool": "^3.6.2",
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "^1.23.0"
   }
 }
